alignment and background issues fixed, Ida Krone pic added

--- a/style/circus.css
+++ b/style/circus.css
@@ -101,8 +101,8 @@ body{
 
 #aboutus{
   padding-left: 10px;
- /* width: 1200px; */
-  height: 550px;
+  width:79%;
+  height:79%;
 }
 
 #aboutimg{
@@ -111,11 +111,20 @@ body{
   height:100%;
 }
 
+#about-ida {
+  height:45%;
+}
+
 #bookingdiv {
   padding-left:10px;
-  width: 1200px;
-
+  width: 100%;
 }
+
+.bookingbackground {
+  /* didn't succeed when I put the background here for some reason... */
+  margin-bottom: 10px;
+}
+
 
 #topcont{
   margin: 0px;
@@ -137,19 +146,13 @@ body{
   filter: drop-shadow(5px 5px 5px #222);
 }
 
-.about-us {
+#about {
   font-family: Garamond, serif;
   text-decoration: none;
+  font-weight: bold;
   font-size: 20px;
 }
 
-/*
-  #aboutus img{
-    padding-bottom: 10px;
-    width:100%;
-    height:100%;
-  }
-*/
   /*footer*/
 
   footer {    
